chore: 문법 변경